--- a/slides.tmpl
+++ b/slides.tmpl
@@ -161,7 +161,7 @@
       });
     }
 
-    setTimeout(initRemark, 5);
+    window.addEventListener('DOMContentLoaded', initRemark);
     window.addEventListener('hotreload', initRemark);
 
     /* setTimeout(function() {
