--- a/site.tmpl
+++ b/site.tmpl
@@ -48,10 +48,10 @@
 <body>
   <header class="greyback">
     <h2 id="title"><a href="/">solovyov.net</a></h2>
-    <ul class="nobullets flex-row gap15 m-auto-0">
+    <ul class="nobullets flex-row gap15 m-auto-0" style="overflow-x: auto">
       <li><a href="/consult/">Consulting</a></li>
       <li><a href="/blog/">Blog</a></li>
-      <li><a href="/about/">About</a></li>
+      <!-- <li><a href="/about/">About</a></li> -->
     </ul>
   </header>
 
@@ -59,7 +59,7 @@
 
 {{ define "footer" }}
   <footer>
-    &#169; 2006&ndash;2023 <a href="{{ .Rel "/" }}">{{ .Site.Other.Author }}</a>
+    &#169; 2006&ndash;2023 <a href="{{ .Rel "/about/" }}">{{ .Site.Other.Author }}</a>
   </footer>
 </body>
 </html>
