--- a/slides.tmpl
+++ b/slides.tmpl
@@ -6,6 +6,7 @@
 <head>
   <meta charset="utf-8">
 
+  <link rel="icon" href="{{ "static/favicon.png" | version (.Site.Pages.ByPath "index.html") | cut "^." "$" }}" type="image/png" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700|Oswald" rel="stylesheet">
   <script src="https://remarkjs.com/downloads/remark-0.15.0.min.js" type="text/javascript"></script>
   <link href="https://highlightjs.org/static/demo/styles/github.css"  rel="stylesheet">
@@ -67,12 +68,6 @@
       background-size: 100%;
     }
 
-    .mk-logo {
-      background-image: url("small-mk.svg");
-      background-position: left 20px bottom 20px;
-      background-size: 50px;
-    }
-
     .full-height {
       background-size: auto 100%;
     }
@@ -114,8 +109,12 @@
     .invert { background-color: black; }
     .orange { background-color: #ff7a16; }
     .green { background-color: #63b132; }
-    .invert, .orange, .green { color: white; }
-    .invert h1, .orange h1, .green h1 { color: white; }
+    .invert, .orange, .green,
+    .invert h1, .orange h1, .green h1,
+    .invert a {
+      color: white;
+      text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    }
 
     .red { color: red; }
 
@@ -159,6 +158,7 @@
           return current > 1 ? current + ' / ' + total : ''
         }
       });
+      window.dispatchEvent(new CustomEvent('remark-init'));
     }
 
     window.addEventListener('DOMContentLoaded', initRemark);
