--- a/slides.tmpl
+++ b/slides.tmpl
@@ -8,7 +8,7 @@
 
   <link rel="icon" href="{{ "static/favicon.png" | version (.Site.Pages.ByPath "index.html") | cut "^." "$" }}" type="image/png" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700|Oswald" rel="stylesheet">
-  <script src="https://remarkjs.com/downloads/remark-0.15.0.min.js" type="text/javascript"></script>
+  <script src="{{ version . "static/remark-0.15.0.min.js" }}"></script>
   <link href="https://highlightjs.org/static/demo/styles/github.css"  rel="stylesheet">
   <style type="text/css">
     .hljs-github .hljs { background: inherit; }
