--- a/site.tmpl
+++ b/site.tmpl
@@ -47,9 +47,9 @@
   <header class="greyback">
     <h2 id="title"><a href="/">solovyov.net</a></h2>
     <ul class="nobullets flex-row gap15 m-auto-0" style="overflow-x: auto">
-      <li><a href="/consult/">Consulting</a></li>
+      <!-- <li><a href="/consult/">Consulting</a></li> -->
+      <li><a href="/about/">About</a></li>
       <li><a href="/blog/">Blog</a></li>
-      <!-- <li><a href="/about/">About</a></li> -->
     </ul>
   </header>
 
