fix rel canonical

--- a/site.tmpl
+++ b/site.tmpl
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="canonical" type="{{ .Site.Other.Url }}{{ .Url }}">
+  <link rel="canonical" href="{{ .Site.Other.Url }}{{ .Url }}">
   <link rel="alternate" type="application/atom+xml"
         title="{{ .Site.Other.Title }}" href="{{ .Site.Other.Url }}blog.atom">
   {{ if .Other.Alternate }}{{ .Other.Alternate }}{{ end }}
