update sse post to get more traffic from google hehe

--- a/site.tmpl
+++ b/site.tmpl
@@ -13,7 +13,7 @@
   {{ if .Other.Meta }}{{ .Other.Meta }}{{ end }}
   <title>{{ some .Title .Site.Other.Title }}</title>
   <meta name="author" content="{{ .Site.Other.Author }}">
-  <meta name="keywords" content="alexander solovyov, piranha, kasta, clojure, python, emacs, blog
+  <meta name="keywords" content="alexander solovyov, piranha, clojure, python, emacs, blog
     {{- if .Other.Keywords }}, {{ .Other.Keywords }}{{ end }}">
   <meta name="description" content="{{ if .Other.Description -}}
     {{ .Other.Description }}
